--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -369,7 +369,19 @@
    "source": [
     "# Magic methods\n",
     "\n",
-    "When we perform certain operations in Python, behind the scenes, the operator is translated into a method call. For example, when we compare values with `==`, there's real"
+    "When we perform certain operations in Python, behind the scenes, the operator is translated into a method call. For example, when we compare values with `==`, there's really a method that is being invoked.\n",
+    "\n",
+    "Every operator that you can think of, plus many you probably cannot, are all implemented using methods.\n",
+    "\n",
+    "The thing is, these methods don't always need to be defined. And you probably shoudn't be invoking them on your own very often. Plus, if we define these methods, then we really change the way that our objects work, because Python sees the method and uses it .\n",
+    "\n",
+    "For all of these reasons, these special methods, known as \"magic methods,\" have special names. All of their names are \"dunders,\" meaning that they start and end with a double underscore, `__`. (That's not `_`, but rather `__` both before and after the method name.)\n",
+    "\n",
+    "I want to show you some magic methods now, and we'll use them in a number of classes.\n",
+    "\n",
+    "It's typical to implement a number of these methods. Also, new Python functionality is generally implemented by adding new dunder methods.\n",
+    "\n",
+    "You should *not* call a m"
    ]
   }
  ],
