--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -381,8 +381,15 @@
     "\n",
     "It's typical to implement a number of these methods. Also, new Python functionality is generally implemented by adding new dunder methods.\n",
     "\n",
-    "You should *not* call a m"
+    "You should *not* name a method with dunders unless you know what you're doing! You might get yourself into trouble, either now or down the road if/when Python uses that name."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
