--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -464,21 +464,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# I'm going to add a __len__ method that returns the length of the name\n",
     "\n",
     "class Person:\n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
-    "    def __len__\n",
+    "    def __len__(self):\n",
+    "        return len(self.name)\n",
     "\n",
     "p = Person('Reuven')\n",
     "\n",
     "len(p)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What happened?\n",
+    "\n",
+    "1. I invoked `len(p)`\n",
+    "2. This was translated into `p.__len__()` by Python\n",
+    "3. Because `__len__` is defined on `Person`, it ran and its return value was returned to the caller."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
