--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -507,8 +507,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# "
+    "# Exercise: How many scoops?\n",
+    "\n",
+    "1. Yesterday, we defined both `Scoop` and `Bowl`. Any instance of `Bowl` has a `scoops` attribute, a list of `Scoop` instances.\n",
+    "2. Add the capability to invoke `len` on an instance of `Bowl`. That'll return the number of scoops in the bowl.\n",
+    "3. After doing so, test that it works -- call `len` on a `Bowl`, then add a new `Scoop`, then measure again."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
