--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -519,7 +519,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Scoop:\n",
+    "    def __init__(self, flavor):\n",
+    "        self.flavor = flavor\n",
+    "\n",
+    "s1 = Scoop('chocolate')\n",
+    "s2 = Scoop('vanilla')\n",
+    "s3 = Scoop('coffee')\n",
+    "    \n",
+    "class Bowl:\n",
+    "    def __init__(self):\n",
+    "        self.scoops = []\n",
+    "\n",
+    "    def add_scoop(self, new_scoop):\n",
+    "        self.scoops.append(new_scoop)\n",
+    "\n",
+    "    def add_scoops(self, *new_scoops):\n",
+    "        for one_scoop in new_scoops:    # iterate over the list of scoops\n",
+    "            self.add_scoop(one_scoop)   # invoke self.add_scoop for each one, one at a time\n",
+    "\n",
+    "    def flavors(self):\n",
+    "        output = []\n",
+    "\n",
+    "        for one_scoop in self.scoops:\n",
+    "            output.append(one_scoop.flavor)\n",
+    "\n",
+    "        return output\n",
+    "\n",
+    "b = Bowl()   \n",
+    "b.add_scoops(s1, s2, s3)   # removed square brackets, so we're invoking it with 3 arguments\n",
+    "list_of_flavors = b.flavors()\n",
+    "\n",
+    "print(list_of_flavors)     # print forwards\n",
+    "print(list_of_flavors[::-1])  # print backwards"
+   ]
   }
  ],
  "metadata": {
