--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -516,9 +516,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chocolate', 'vanilla', 'coffee']\n"
+     ]
+    }
+   ],
    "source": [
     "class Scoop:\n",
     "    def __init__(self, flavor):\n",
@@ -550,10 +558,15 @@
     "b = Bowl()   \n",
     "b.add_scoops(s1, s2, s3)   # removed square brackets, so we're invoking it with 3 arguments\n",
     "list_of_flavors = b.flavors()\n",
-    "\n",
-    "print(list_of_flavors)     # print forwards\n",
-    "print(list_of_flavors[::-1])  # print backwards"
+    "print(list_of_flavors)     # print forwards\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
