--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -516,14 +516,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['chocolate', 'vanilla', 'coffee']\n"
+      "['chocolate', 'vanilla', 'coffee']\n",
+      "3\n"
      ]
     }
    ],
@@ -555,10 +556,15 @@
     "\n",
     "        return output\n",
     "\n",
+    "    def __len__(self):\n",
+    "        return len(self.scoops)\n",
+    "\n",
     "b = Bowl()   \n",
     "b.add_scoops(s1, s2, s3)   # removed square brackets, so we're invoking it with 3 arguments\n",
     "list_of_flavors = b.flavors()\n",
-    "print(list_of_flavors)     # print forwards\n"
+    "print(list_of_flavors)     # print forwards\n",
+    "\n",
+    "print(len(b))"
    ]
   },
   {
