--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -578,6 +578,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -594,6 +601,32 @@
    ],
    "source": [
     "s.__len__()  # don't do this, but *can* you?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Warning:\n",
+    "\n",
+    "Make sure that you spell the magic methods correctly!\n",
+    "\n",
+    "I've often seen people accidentally write `__int__` instead of `__init__`. That is the magic method that is invoked when you want to turn a value into an integer, when you invoke `int()` on it! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Next up:\n",
+    "\n",
+    "1. Methods for `__str__` and `__repr__`\n",
+    "2. A handful of other magic methods, as well"
    ]
   },
   {
