--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -640,10 +640,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Person object at 0x108a734d0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p)  # Person"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Cellphone object at 0x108a73620>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(c1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Cellphone object at 0x108a9f250>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(c2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What's happening here?\n",
+    "\n",
+    "We can actually use `print` on any object in Python. That's because `print` invokes `str` on whatever it's going to print. And everything in Python knows how to turn itself into a string.\n",
+    "\n",
+    "How does the object know how to turn itself into a string? Because there is a default implementation of the `__str__` method that is shared by all objects. If we do nothing, then every object that doesn't have a special way to display itself will use this ugly way.\n",
+    "\n",
+    "But this also explains what we can do to change things: If we implement `__str__` on o"
+   ]
   }
  ],
  "metadata": {
