--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -699,8 +699,15 @@
     "\n",
     "How does the object know how to turn itself into a string? Because there is a default implementation of the `__str__` method that is shared by all objects. If we do nothing, then every object that doesn't have a special way to display itself will use this ugly way.\n",
     "\n",
-    "But this also explains what we can do to change things: If we implement `__str__` on o"
+    "But this also explains what we can do to change things: If we implement `__str__` on our object, then our method will be invoked instead of the default, and then we can customize what string is returned. Note that `__str__` *must* return a string! But the string you do return can be anything at all."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
