--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -749,6 +749,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Printable scoops\n",
+    "\n",
+    "1. Modify the `Scoop` class such that printing a scoop gives us a string, \"Scoop of FLAVOR\".\n",
+    "2. Make sure that this works by printing a number of scoops.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
