--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -826,8 +826,17 @@
    "source": [
     "# Exercise: Printable *bowls*\n",
     "\n",
-    "1. Now I want you to make it possible to say `print(b)`, where `b` is"
+    "1. Now I want you to make it possible to say `print(b)`, where `b` is an instance of `Bowl`. Doing so should display \"Bowl with:\" and then each of the scoops on a line by itself.\n",
+    "2. (If you can number the scoops, even better, but don't worry about it too much.)\n",
+    "3. The printout for each of the scoops can be the result of invoking `str(a_scoop)`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
