--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,11 @@
       "Scoop of vanilla\n",
       "Scoop of coffee\n",
       "*** Now printing the bowl ***\n",
-      "<__main__.Bowl object at 0x108ad7cb0>\n"
+      "Bowl of: \n",
+      "\t1: Scoop of chocolate\n",
+      "\t2: Scoop of vanilla\n",
+      "\t3: Scoop of coffee\n",
+      "\n"
      ]
     }
    ],
@@ -882,6 +886,14 @@
     "\n",
     "    def __len__(self):\n",
     "        return len(self.scoops)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        output = 'Bowl of: \\n'\n",
+    "\n",
+    "        for index, one_scoop in enumerate(self.scoops, 1):\n",
+    "            output += f'\\t{index}: {one_scoop}\\n'\n",
+    "        \n",
+    "        return output\n",
     "\n",
     "b = Bowl()   \n",
     "b.add_scoops(s1, s2, s3)   # removed square brackets, so we're invoking it with 3 arguments\n",
