--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -849,8 +849,7 @@
       "Bowl of: \n",
       "\t1: Scoop of chocolate\n",
       "\t2: Scoop of vanilla\n",
-      "\t3: Scoop of coffee\n",
-      "\n"
+      "\t3: Scoop of coffee\n"
      ]
     }
    ],
@@ -890,10 +889,11 @@
     "    def __str__(self):\n",
     "        output = 'Bowl of: \\n'\n",
     "\n",
-    "        for index, one_scoop in enumerate(self.scoops, 1):\n",
-    "            output += f'\\t{index}: {one_scoop}\\n'\n",
+    "        # for index, one_scoop in enumerate(self.scoops, 1):\n",
+    "        #     output += f'\\t{index}: {one_scoop}\\n'\n",
     "        \n",
-    "        return output\n",
+    "        return output + '\\n'.join([f'\\t{index}: {one_scoop}'\n",
+    "                   for index, one_scoop in enumerate(self.scoops, 1)])\n",
     "\n",
     "b = Bowl()   \n",
     "b.add_scoops(s1, s2, s3)   # removed square brackets, so we're invoking it with 3 arguments\n",
@@ -916,7 +916,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# remember that we can look directly at b.scoops!\n",
+    "# what "
+   ]
   }
  ],
  "metadata": {
