--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -913,12 +913,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Scoop at 0x108ad4ec0>,\n",
+       " <__main__.Scoop at 0x10fdfefd0>,\n",
+       " <__main__.Scoop at 0x10fdff4d0>]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# remember that we can look directly at b.scoops!\n",
-    "# what "
+    "# what happens now that we have implemented __str__ on Scoop? \n",
+    "\n",
+    "b.scoops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<__main__.Scoop object at 0x108ad4ec0>, <__main__.Scoop object at 0x10fdfefd0>, <__main__.Scoop object at 0x10fdff4d0>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b.scoops)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `__str__` and `__repr__`\n",
+    "\n",
+    "It turns out that there are *two* ways to turn a Python object into a string:\n",
+    "\n",
+    "- `__str__` is the method used when we invoke `print` or `str` on an object. `__str__` is supposed to return a string that is for public consumption, for the end user to view.\n",
+    "- `__repr__` is the method used when an object should be turned into a string for programmers, debuggers, and other people maintaining the code who want to see more of the internals.\n",
+    "\n",
+    "When we defined `__str__` on `Scoop`, we still left the default of `__repr__`, which is used in Jupyter and debuggers when we print a list, and the list contains `Scoop` objects.\n",
+    "\n",
+    "We could:\n",
+    "\n",
+    "1. "
    ]
   }
  ],
