--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -968,8 +968,18 @@
     "\n",
     "We could:\n",
     "\n",
-    "1. "
+    "1. Define `__repr__` as well, perhaps even to be the same as `__str__`.\n",
+    "2. We could not define `__str__`, and instead define `__repr__`. In such a case, then `__repr__` is used for both itself and `__str__`.\n",
+    "\n",
+    "Officially, Python conventions are that whatever `__repr__` returns should be a legitimate Python expression. However, it's so incredibly useful to have `__repr__` and `__str__` be the same thing that I normally only define `__str__` when I want to ensure that end users see something different from programmers. This is often not the case!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
