--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -971,7 +971,114 @@
     "1. Define `__repr__` as well, perhaps even to be the same as `__str__`.\n",
     "2. We could not define `__str__`, and instead define `__repr__`. In such a case, then `__repr__` is used for both itself and `__str__`.\n",
     "\n",
-    "Officially, Python conventions are that whatever `__repr__` returns should be a legitimate Python expression. However, it's so incredibly useful to have `__repr__` and `__str__` be the same thing that I normally only define `__str__` when I want to ensure that end users see something different from programmers. This is often not the case!"
+    "Officially, Python conventions are that whatever `__repr__` returns should be a legitimate Python expression. However, it's so incredibly useful to have `__repr__` and `__str__` be the same thing that I normally only define `__str__` when I want to ensure that end users see something different from programmers. This is often not the case!\n",
+    "\n",
+    "Officially, \n",
+    "\n",
+    "- `__str__` is for end users.\n",
+    "- `__repr__` is for programmers.\n",
+    "\n",
+    "If you don't define `__str__` but do define `__repr__`, then it handles both cases. I normally do that; I don't define `__str__` but I do define `__repr__`. If and when I want end users to see something specific to them, I add `__str__` later on, which doesn't have the \"internal\" information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chocolate', 'vanilla', 'coffee']\n",
+      "3\n",
+      "Scoop of chocolate\n",
+      "Scoop of vanilla\n",
+      "Scoop of coffee\n",
+      "*** Now printing the bowl ***\n",
+      "Bowl of: \n",
+      "\t1: Scoop of chocolate\n",
+      "\t2: Scoop of vanilla\n",
+      "\t3: Scoop of coffee\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Scoop:\n",
+    "    def __init__(self, flavor):\n",
+    "        self.flavor = flavor\n",
+    "    def __repr__(self):\n",
+    "        return f'Scoop of {self.flavor}'\n",
+    "\n",
+    "s1 = Scoop('chocolate')\n",
+    "s2 = Scoop('vanilla')\n",
+    "s3 = Scoop('coffee')\n",
+    "    \n",
+    "class Bowl:\n",
+    "    def __init__(self):\n",
+    "        self.scoops = []\n",
+    "\n",
+    "    def add_scoop(self, new_scoop):\n",
+    "        self.scoops.append(new_scoop)\n",
+    "\n",
+    "    def add_scoops(self, *new_scoops):\n",
+    "        for one_scoop in new_scoops:    # iterate over the list of scoops\n",
+    "            self.add_scoop(one_scoop)   # invoke self.add_scoop for each one, one at a time\n",
+    "\n",
+    "    def flavors(self):\n",
+    "        output = []\n",
+    "\n",
+    "        for one_scoop in self.scoops:\n",
+    "            output.append(one_scoop.flavor)\n",
+    "\n",
+    "        return output\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.scoops)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        output = 'Bowl of: \\n'\n",
+    "\n",
+    "        # for index, one_scoop in enumerate(self.scoops, 1):\n",
+    "        #     output += f'\\t{index}: {one_scoop}\\n'\n",
+    "        \n",
+    "        return output + '\\n'.join([f'\\t{index}: {one_scoop}'\n",
+    "                   for index, one_scoop in enumerate(self.scoops, 1)])\n",
+    "\n",
+    "b = Bowl()   \n",
+    "b.add_scoops(s1, s2, s3)   # removed square brackets, so we're invoking it with 3 arguments\n",
+    "list_of_flavors = b.flavors()\n",
+    "\n",
+    "print(list_of_flavors)     # print forwards\n",
+    "\n",
+    "print(len(b))\n",
+    "\n",
+    "print(s1)  \n",
+    "print(s2)\n",
+    "print(s3)\n",
+    "\n",
+    "print('*** Now printing the bowl ***')\n",
+    "print(b)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Scoop of chocolate, Scoop of vanilla, Scoop of coffee]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.scoops"
    ]
   },
   {
