--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1080,6 +1080,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Other magic methods\n",
+    "\n",
+    "Magic methods are *everywhere* in Python! Let's talk about a few of them.\n",
+    "\n",
+    "- `__eq__` -- this method is invoked whenever you use `==`. The item on the left of the operator is where the method is invoked, and the value on the right is passed as an additional argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "p1 = Person('abcd')\n",
+    "p2 = Person('abcd')\n",
+    "\n",
+    "p1 == p2   # are these equal?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def __eq__(self, other):    # if I say a == b, it's translated into a.__eq__(b)\n",
+    "        return self.name == other.name\n",
+    "\n",
+    "p1 = Person('abcd')\n",
+    "p2 = Person('abcd')\n",
+    "\n",
+    "p1 == p2   # are these equal?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
