--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1225,6 +1225,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Magic method `__getitem__`\n",
+    "\n",
+    "Have you ever noticed that:\n",
+    "\n",
+    "- We retrieve from a string with `[]`\n",
+    "- We retrieve from a list with `[]`\n",
+    "- We retrieve from a tuple with `[]`\n",
+    "- We retrieve from a dict with `[]'\n",
+    "\n",
+    "Why? And how?\n",
+    "\n",
+    "All four of these classes implement the `__getitem__` method. When we invoke `a[b]`, that invokes `a.__getitem__(b)`. What the class does with that method call depends on what it's supposed to do."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
