--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1277,8 +1277,16 @@
    "source": [
     "# Exercise: Retrieve one scoop\n",
     "\n",
-    "1. Make it possible to retrieve a `Scoop` from an instance of `1B"
+    "1. Make it possible to retrieve a `Scoop` from an instance of `Bowl` by specifying the flavor.\n",
+    "2. That is, if I say `b['chocolate']`, then it should either return the first scoop with `'chocolate'` as the flavor, or return `None` to indicate that it didn't find that."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
