--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1283,6 +1283,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chocolate', 'vanilla', 'coffee']\n",
+      "3\n",
+      "Scoop of chocolate\n",
+      "Scoop of vanilla\n",
+      "Scoop of coffee\n",
+      "*** Now printing the bowl ***\n",
+      "Bowl of: \n",
+      "\t1: Scoop of chocolate\n",
+      "\t2: Scoop of vanilla\n",
+      "\t3: Scoop of coffee\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'Bowl' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[56]\u001b[39m\u001b[32m, line 58\u001b[39m\n\u001b[32m     55\u001b[39m \u001b[38;5;28mprint\u001b[39m(b)  \n\u001b[32m     57\u001b[39m \u001b[38;5;66;03m# let's retrieve a scoop by its numeric index\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m58\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mb\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m]\u001b[49m)  \n",
+      "\u001b[31mTypeError\u001b[39m: 'Bowl' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "class Scoop:\n",
+    "    def __init__(self, flavor):\n",
+    "        self.flavor = flavor\n",
+    "    def __repr__(self):\n",
+    "        return f'Scoop of {self.flavor}'\n",
+    "\n",
+    "s1 = Scoop('chocolate')\n",
+    "s2 = Scoop('vanilla')\n",
+    "s3 = Scoop('coffee')\n",
+    "    \n",
+    "class Bowl:\n",
+    "    def __init__(self):\n",
+    "        self.scoops = []\n",
+    "\n",
+    "    def add_scoop(self, new_scoop):\n",
+    "        self.scoops.append(new_scoop)\n",
+    "\n",
+    "    def add_scoops(self, *new_scoops):\n",
+    "        for one_scoop in new_scoops:    # iterate over the list of scoops\n",
+    "            self.add_scoop(one_scoop)   # invoke self.add_scoop for each one, one at a time\n",
+    "\n",
+    "    def flavors(self):\n",
+    "        output = []\n",
+    "\n",
+    "        for one_scoop in self.scoops:\n",
+    "            output.append(one_scoop.flavor)\n",
+    "\n",
+    "        return output\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.scoops)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        output = 'Bowl of: \\n'\n",
+    "\n",
+    "        # for index, one_scoop in enumerate(self.scoops, 1):\n",
+    "        #     output += f'\\t{index}: {one_scoop}\\n'\n",
+    "        \n",
+    "        return output + '\\n'.join([f'\\t{index}: {one_scoop}'\n",
+    "                   for index, one_scoop in enumerate(self.scoops, 1)])\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        \n",
+    "\n",
+    "b = Bowl()   \n",
+    "b.add_scoops(s1, s2, s3)   # removed square brackets, so we're invoking it with 3 arguments\n",
+    "list_of_flavors = b.flavors()\n",
+    "\n",
+    "print(list_of_flavors)     # print forwards\n",
+    "\n",
+    "print(len(b))\n",
+    "\n",
+    "print(s1)  \n",
+    "print(s2)\n",
+    "print(s3)\n",
+    "\n",
+    "print('*** Now printing the bowl ***')\n",
+    "print(b)  \n",
+    "\n",
+    "# let's retrieve a scoop by its numeric index\n",
+    "print(b[1])  "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
