--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1299,18 +1299,8 @@
       "Bowl of: \n",
       "\t1: Scoop of chocolate\n",
       "\t2: Scoop of vanilla\n",
-      "\t3: Scoop of coffee\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'Bowl' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[56]\u001b[39m\u001b[32m, line 58\u001b[39m\n\u001b[32m     55\u001b[39m \u001b[38;5;28mprint\u001b[39m(b)  \n\u001b[32m     57\u001b[39m \u001b[38;5;66;03m# let's retrieve a scoop by its numeric index\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m58\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mb\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m]\u001b[49m)  \n",
-      "\u001b[31mTypeError\u001b[39m: 'Bowl' object is not subscriptable"
+      "\t3: Scoop of coffee\n",
+      "Scoop of vanilla\n"
      ]
     }
    ],
@@ -1356,8 +1346,10 @@
     "        return output + '\\n'.join([f'\\t{index}: {one_scoop}'\n",
     "                   for index, one_scoop in enumerate(self.scoops, 1)])\n",
     "\n",
-    "    def __getitem__(self, index):\n",
-    "        \n",
+    "    def __getitem__(self, flavor):\n",
+    "        for one_scoop in self.scoops:\n",
+    "            if one_scoop.flavor == flavor:\n",
+    "                return one_scoop\n",
     "\n",
     "b = Bowl()   \n",
     "b.add_scoops(s1, s2, s3)   # removed square brackets, so we're invoking it with 3 arguments\n",
@@ -1375,15 +1367,18 @@
     "print(b)  \n",
     "\n",
     "# let's retrieve a scoop by its numeric index\n",
-    "print(b[1])  "
+    "print(b['vanilla'])  "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Next up\n",
+    "\n",
+    "1. Class attributes\n",
+    "2. ICPO "
+   ]
   }
  ],
  "metadata": {
