--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1377,8 +1377,16 @@
     "# Next up\n",
     "\n",
     "1. Class attributes\n",
-    "2. ICPO "
+    "2. ICPO -- searching for attributes\n",
+    "3. Inheritance"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
