--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1382,6 +1382,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How should we order magic methods?\n",
+    "\n",
+    "- `__init__` should always come first\n",
+    "- I would suggest (generally) having all magic methods before others\n",
+    "\n",
+    "I really don't think there's a convention on this."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
