--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1394,11 +1394,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Class attributes\n",
+    "\n",
+    "We have already said that everything in Python is an object. We're now going to see that *classes* are objects, too.\n",
+    "\n",
+    "We've also said that every object in Python has attributes. We're now going to see that *classes* have attributes, too.\n",
+    "\n",
+    "Yes, at the end, we'll see that in"
+   ]
   }
  ],
  "metadata": {
