--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1403,8 +1403,17 @@
     "\n",
     "We've also said that every object in Python has attributes. We're now going to see that *classes* have attributes, too.\n",
     "\n",
-    "Yes, at the end, we'll see that in"
+    "Yes, at the end, we'll see that instances have attributes and classes have attributes.\n",
+    "\n",
+    "There is no such thing in Python as an attribute that is \"shared\" across objects. The idea that an attribute will exist jointly on a class and its instances does not exist."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
