--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1410,10 +1410,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, name1!\n",
+      "Hello, name2!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's say that we have a Person class\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}!'\n",
+    "\n",
+    "p1 = Person('name1')\n",
+    "p2 = Person('name2')\n",
+    "\n",
+    "print(p1.greet())\n",
+    "print(p2.greet())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# My boss comes to me and says: Our customers love the Person class!\n",
+    "# They want some new functionality, to know how many instances have been created\n",
+    "\n",
+    "# a\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def greet(self):\n",
+    "        return f'Hello, {self.name}!'\n",
+    "\n",
+    "p1 = Person('name1')\n",
+    "p2 = Person('name2')\n",
+    "\n",
+    "print(p1.greet())\n",
+    "print(p2.greet())"
+   ]
   }
  ],
  "metadata": {
