--- a/OReilly - 2025-10October-21-objects.ipynb
+++ b/OReilly - 2025-10October-21-objects.ipynb
@@ -1441,27 +1441,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before, population = 0\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'population' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mUnboundLocalError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[62]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     14\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mHello, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m!\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mBefore, population = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpopulation\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m p1 = \u001b[43mPerson\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mname1\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     18\u001b[39m p2 = Person(\u001b[33m'\u001b[39m\u001b[33mname2\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     19\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mAfter, population = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpopulation\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[62]\u001b[39m\u001b[32m, line 11\u001b[39m, in \u001b[36mPerson.__init__\u001b[39m\u001b[34m(self, name)\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name):\n\u001b[32m     10\u001b[39m     \u001b[38;5;28mself\u001b[39m.name = name\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m     \u001b[43mpopulation\u001b[49m += \u001b[32m1\u001b[39m\n",
+      "\u001b[31mUnboundLocalError\u001b[39m: cannot access local variable 'population' where it is not associated with a value"
+     ]
+    }
+   ],
    "source": [
     "# My boss comes to me and says: Our customers love the Person class!\n",
     "# They want some new functionality, to know how many instances have been created\n",
     "\n",
-    "# a\n",
+    "# answer #1: a global variable, population!\n",
+    "\n",
+    "population = 0\n",
     "\n",
     "class Person:\n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
+    "        population += 1    # add 1 to the global variable population!\n",
     "\n",
     "    def greet(self):\n",
     "        return f'Hello, {self.name}!'\n",
     "\n",
+    "print(f'Before, population = {population}')\n",
     "p1 = Person('name1')\n",
     "p2 = Person('name2')\n",
+    "print(f'After, population = {population}')\n",
     "\n",
     "print(p1.greet())\n",
     "print(p2.greet())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When it comes to global variables in Python, either the variable exists and has a value or it doesn't exist. There is no such thing as a variable existing but being \"unbound\" to any value.\n",
+    "\n",
+    "However, functions are different! When we write our function, Python notices the names of the variables to which"
    ]
   }
  ],
